<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cca99006_fusion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="elvex@todo.todo">elvex</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>twil</depend>
  <depend>twil_bringup</depend>
  <depend>Eigen3</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
